SERVER-30173 Make moveChunk report orphaned range deletion errors consistently